fix(backend): download fixed
